<resources>
    <string name="app_name">Calculator</string>
    <string name="del">DEL</string>
    <string name="dev">/</string>
    <string name="mult">*</string>
    <string name="min">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="error">Error</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="input_digits">input digits</string>
    <string name="color">color</string>
    <string name="calculator">calculator</string>
    <string name="galery">galery</string>
    <string name="settings">settings</string>
    <string name="canceled">Cancelled</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>

    <string-array name="pref_example_list_values">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>

    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>

    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    Example settings for Notifications
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_name">pref_name</string>
    <string name="pref_list">example_list</string>
    <string name="pref_notification">notifications_new_message</string>
    <string name="pref_sync_frequency">sync_frequency</string>
    <string name="pref_rington">pref_rington</string>
    <string name="pref_vibrate">pref_vibrate</string>
    <string name="general_switch">example_switch</string>
    <string name="contentdescription">contentDescription</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
